# pyctp

./: .gitignore  CLAUDE.md  README.md  build.sh
api/: CMakeLists.txt  convert_dylib.sh
demo/: md_demo.py  td_demo.py
package/: README.md  pyproject.toml
package/pyctp/: __init__.py  _loader.py  thostmduserapi.py  thosttraderapi.py
package/pyctp/ctp/: __init__.py
package/pyctp/rohon/: __init__.py
