[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyctp"
version = "6.7.2"
requires-python = ">=3.8"
description = "CTP (China Futures Market) Python API Wrapper with multi-implementation support"
dependencies = []

[tool.setuptools]
packages = ["pyctp", "pyctp.ctp", "pyctp.rohon"]
include-package-data = true

[tool.setuptools.package-data]
pyctp = [
    "*.so",
    "*.pyd",
    "*.dll",
    "lib/**/*.so",
    "lib/**/*.dylib",
    "lib/**/*.dll",
    "lib/**/*",
]
